send native events to plugins on mouse enter and exit. b=332597 r=smichaud sr=roc